# KdnLang

./: Cargo.toml  LICENSE  README.md  git_push.sh  main.go  main.py  plan.md  test.kdn  test.py
docs/: getting_started.md  index.md  stdlib.md  syntax.md
docs/language_guide/: basic_types.md  error_handling.md  index.md  pattern_matching.md
examples/: hello.kdn  simple.kdn  test_type_annotation.kdn  typed_examples.kdn
src/: cli.rs  compiler.rs  error.rs  errors.rs  go.mod  interpreter.rs  lexer.rs  main.go  main.rs  parser.rs  typechecker.rs
src/compiler/: ast.rs  mod.rs
src/error_handling/: errors.rs
src/errors/: mod.rs
src/interpreter/: context.rs  environment.rs  evaluator.rs  execution.rs  mod.rs  value.rs
src/lexer/: lexer.go  lexer.rs  mod.rs  token.rs  tokens.go  tokens.rs
src/parser/: ast.rs  call_parser.rs  conditional_parser.rs  expression.rs  expression_parser.rs  function_parser.rs  grammar.pest  mod.rs  parser.rs  parser_impl.rs  types.rs  variable_parser.rs
src/stdlib/: mod.rs
src/stdlib/io/: input.rs  print.rs
src/stdlib/type_conversion/: mod.rs
src/stdlib/type_conversion/bool/: mod.rs
src/stdlib/type_conversion/float/: mod.rs
src/stdlib/type_conversion/int/: mod.rs
src/stdlib/type_conversion/str/: mod.rs
src/typecheck/: mod.rs
src/typechecker/: mod.rs
