[package]
name = "kdnlang"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = "0.15.0"
lazy_static = "1.4" # For global constants
regex = "1" # Regular expressions
serde = { version = "1", features = ["derive"] } # Serialization
serde_json = "1"
async-std = { version = "1", features = ["attributes"] } # Async runtime

