[package]
name = "kdnlang"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = "0.15.0" # For lexing
pest = "2.1" # For parsing
pest_derive = "2.1" # For parsing
miette = { version = "7.5.0", features = ["fancy"] } # Error handling with fancy diagnostics
thiserror = "2.0.12" # For error definitions
clap = { version = "4.5.35", features = ["derive"] }
